tests/expectations/compiler/futures/misplaced_future_fail.out
DCE_ENABLED:
Error [ESAZ0374005]: A future may not be used in this way
    --> compiler-test:10:9
     |
  10 |         child.aleo/foo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Futures should be created, assigned to a variable, and consumed without being moved or reassigned.
Error [ESAZ0374005]: A future may not be used in this way
    --> compiler-test:12:9
     |
  12 |         child.aleo/boo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Futures should be created, assigned to a variable, and consumed without being moved or reassigned.

DCE_DISABLED:
Error [ESAZ0374005]: A future may not be used in this way
    --> compiler-test:10:9
     |
  10 |         child.aleo/foo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Futures should be created, assigned to a variable, and consumed without being moved or reassigned.
Error [ESAZ0374005]: A future may not be used in this way
    --> compiler-test:12:9
     |
  12 |         child.aleo/boo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Futures should be created, assigned to a variable, and consumed without being moved or reassigned.
